# trusted-pipeline

Dockerfiles/: README.md  dbt-dummy.yaml  kafka-with-zookeeper.yaml  postgres-basic.yaml  postgresql.Dockerfile  postgresql.yaml
dagster-example/github-issues/: README.md  __init__.py  get_github_issues.py  requirements.txt
dagster-example/github-issues/github_issues/: __init__.py  assets.py
dagster-example/github-issues/github_issues/assets/: __init__.py
dagster-example/github-issues/github_issues/dlt/: __init__.py
dagster-example/github-issues/github_issues/resources/: __init__.py
dlt_snippets/: README.md  check_sqlite_data.py  create_duck_db.py  create_sqlite_db.py  custome_destination_sqllite.py  json2snowflake.py  mongo2Mysql.py  mysql-init.txt  requirements.txt  set_snowflake_envs.py  sqlite2MySQL_movie.py
dlt_snippets/.dlt/: secrets.toml
kafka/: README.md  app_pub_order.py  pyproject.toml
mysql2postgresql/: connectorx_mysql2snowflake.py  mysql2postgre_chinook.py
prefect-example/: README.md  deploy_locally.py  dynamic_deployment.py  get_github_data.py  github_pipeline.py  main.py  pyproject.toml
